fix(leaderboard, boardPage padding, headerButton hover): improve spacing on leaderboard, boardPage pages to look good sidebar & add headerButton hover effects:

--- a/Frontend/src/Components/Header/Header.module.css
+++ b/Frontend/src/Components/Header/Header.module.css
@@ -20,6 +20,12 @@
   border-radius: var(--border-radius-main);
   border: var(--lilac-border);
   margin: 0 5px;
+  cursor: pointer;
+  transition: var(--main-trans);
+
+  &:hover {
+    background-color: var(--lilac-color);
+  }
 }
 
 .logo {
