--- a/Frontend/src/pages/BoardPage/BoardPage.module.css
+++ b/Frontend/src/pages/BoardPage/BoardPage.module.css
@@ -1,11 +1,16 @@
 .boardContainer {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   gap: 25px;
   justify-content: center;
   padding: 0 2%;
+  padding-left: calc(2% + 50px);
   margin-top: 100px;
+
+  @media (max-width: 992px) {
+    padding-left: 2%;
+  }
 }
 
 @media (min-width: 769px) {
